Styles: Fix overflowing text
* Added `word-break: break-all;` rule

--- a/src/styles/_overview.less
+++ b/src/styles/_overview.less
@@ -57,6 +57,7 @@
       p {
         color: rgba(60, 60, 67, 0.6);
         margin-top: 22px;
+        word-break: break-all;
         @font-medium();
 
         &:first-child {
